# Techstorm-Engine

./: .gitignore  Build.py  CMakeLists.txt  CMakeOptions.txt  CMakePresets.json  LIBRARIES-LICENSE.txt  LICENSE.txt  README.md  TechstormConfigure.py  TechstormGenerate.py  build-linux.sh  build-windows.bat  build.bat  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.txt  old.txt
.github/workflows/: cmake-multi-platform.yml
Common/: Common.vcxitems
build-scripts/: TechstormConfigure.py  TechstormGenerate.py  build-windows.bat
cmake/: conan_toolchain.cmake  conandeps_legacy.cmake  joltphysics-Target-release.cmake  joltphysics-config.cmake  joltphysics-release-x86_64-data.cmake  joltphysicsTargets.cmake  module-ZLIB-release-x86_64-data.cmake  techstorm.cmake
docs/: Doxyfile  analysis-dependencies.md  overview.md
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000004.html  dir_000000_000010.html  dir_000001_000005.html  dir_000001_000017.html  dir_000004_000005.html  dir_000004_000008.html  dir_000004_000011.html  dir_000004_000012.html  dir_000004_000016.html  dir_000004_000017.html  dir_000005_000017.html  dir_000008_000017.html  dir_000009_000011.html  dir_000009_000016.html  dir_000010_000004.html  dir_000010_000012.html  dir_000010_000017.html  dir_000011_000004.html  dir_000011_000007.html  dir_000011_000016.html  dir_000012_000007.html  dir_000012_000017.html  dir_00f0a3b1654669903f8939607e046ce9.html  dir_00f0a3b1654669903f8939607e046ce9.js  dir_00f0a3b1654669903f8939607e046ce9_dep.dot  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.js  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a.js  dir_26e8b83038726c96012623c58c19f668.html  dir_26e8b83038726c96012623c58c19f668.js  dir_26e8b83038726c96012623c58c19f668_dep.dot  dir_32ee5cd5174bc8350ca188248071e9bd.html  dir_32ee5cd5174bc8350ca188248071e9bd.js  dir_467a9c807a42c7b02e78d7a930074fcd.html  dir_467a9c807a42c7b02e78d7a930074fcd.js  dir_467a9c807a42c7b02e78d7a930074fcd_dep.dot  (+254 more)
docs/latex/: annotated.tex  dir_00f0a3b1654669903f8939607e046ce9.tex  dir_00f0a3b1654669903f8939607e046ce9_dep.dot  dir_1563a38af0d3a5e4a6330d6d45e9792a.tex  dir_1563a38af0d3a5e4a6330d6d45e9792a_dep.dot  dir_2052808828190f934b76e979ee65af8a.tex  dir_2052808828190f934b76e979ee65af8a_dep.dot  dir_26e8b83038726c96012623c58c19f668.tex  dir_32ee5cd5174bc8350ca188248071e9bd.tex  dir_467a9c807a42c7b02e78d7a930074fcd.tex  dir_551ad5bdf126dfe6830e1af9f390776b.tex  dir_61e8c4930a2b0e7b78d347ba3b13742a.tex  dir_61e8c4930a2b0e7b78d347ba3b13742a_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_6aef81ccc517ee77a44ad2fb2acd5c1d.tex  dir_6aef81ccc517ee77a44ad2fb2acd5c1d_dep.dot  dir_6e82b84377b60bf9f36401da93b614f7.tex  dir_77748157c0b49ef1955d95e9a498a394.tex  dir_7cf6b88a36d52e4ad5b6560432f2e789.tex  dir_7cf6b88a36d52e4ad5b6560432f2e789_dep.dot  dir_844f6ab5c2ae79211596f3dcdd81adb7.tex  dir_844f6ab5c2ae79211596f3dcdd81adb7_dep.dot  dir_87a6b9aae9b6643f1c386b942c4914ad.tex  dir_95000645af4f697fd74c2878fe19712e.tex  dir_a73bde138959046fb67aafbb533b33be.tex  dir_ad45fcc0c842cd88b5556c32fab80eb5.tex  dir_ad45fcc0c842cd88b5556c32fab80eb5_dep.dot  dir_bcab553346f4eff5a986862403650cc6.tex  dir_bcab553346f4eff5a986862403650cc6_dep.dot  dir_c743704d4a27141d26350e4960f85eaa.tex  dir_c743704d4a27141d26350e4960f85eaa_dep.dot  dir_c976d518770d4f47559c8fbe2011b03d.tex  dir_def8a6fa26fd21ac3ee8ed00050a517f.tex  dir_def8a6fa26fd21ac3ee8ed00050a517f_dep.dot  dir_eedbc0f69b08006c72429a8d2b33a57d.tex  dir_eedbc0f69b08006c72429a8d2b33a57d_dep.dot  dir_f2c5e5c6e4e4e0c9b0f6d7afea7d8b67.tex  dir_f2c5e5c6e4e4e0c9b0f6d7afea7d8b67_dep.dot  files.tex  (+5 more)
game/: Test.lua
include/: rlights.h
src/application/: Application.rc  ApplicationUtils.cpp  ApplicationUtils.h  CMakeLists.txt  Header.h  main.cpp
src/application/prototyping/: ChunkTesting.h  CircularMap.h  PhysicsPrototype.h  PrototypePhysicsTerrain.h  PrototypingTerrain.h  TSApp.h  Types.h  old.txt  older.txt
src/engine/: BasicCore.h  CMakeLists.txt  Common.cpp  Common.h  EReturnCode.h  EngineComponent.h  GameSettings.h  Project.cpp  Project.h  engine.cpp  engine.h
src/engine/conf/: Config.cpp  Config.h
src/engine/dbg/: Console.cpp  Console.h  Debugger.cpp  Debugger.h  Debugging.h  ELogLevel.h  ELoggingMode.h  Errors.h  Logging.cpp  Logging.h
src/engine/docs/: Convention.txt
src/engine/fs/: FilePathMeta.h  FileSystem.cpp  FileSystem.h
src/engine/input/: Input.cpp  Input.h
src/engine/math/: Vector.cpp  Vector.h
src/engine/modding/: Mod.cpp  Mod.h  ModLoader.cpp  ModLoader.h  ModManager.cpp  ModManager.h  ScriptingAPI.cpp  ScriptingAPI.h
src/engine/physics/: BPLayerInterface.h  BodyActivationListener.h  BroadPhaseLayerRegistry.h  Layers.cpp  Layers.h  Listeners.cpp  Listeners.h  ObjectContactListener.h  ObjectLPF.h  ObjectVsBroadPhaseLayerFilter.h  Physics.cpp  Physics.h  PhysicsCommon.cpp  PhysicsCommon.h
src/engine/physics/old/: BodyActivationListener.h  BroadPhaseLayerRegistry.h  ILayerRegistry.h  Layers.h  ObjectLPF.h  PhysicsInitializer.h
src/engine/renderer/: Camera.cpp  Camera.h  Entity.h  GameCamera.cpp  GameCamera.h  GameObject.cpp  GameObject.h  GameObjectRegistry.cpp  GameObjectRegistry.h  GameUI.cpp  GameUI.h  IEntity.h  IGameObject.h  IGameObjectGate.cpp  IGameObjectGate.h  PhysicsObject.h  RayStorm.h  RenderLayer.cpp  RenderLayer.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  WindowDecorations.h
src/engine/renderer/objects/: PlaneObject.cpp  PlaneObject.h
src/engine/utils/: DoublyLinkedList.h  Gate.h  Globals.h  MiscUtils.cpp  MiscUtils.h  Singleton.h
src/engine/world/: world.h
src/project/: CMakeLists.txt  project.cpp  project.h
src/project/samples/: Sample.h  SampleGroup.h  SamplesProject.h
src/project/samples/basic/: BasicSampleGroup.h  HelloWorldSample.h
src/tools/devsuite/setup/: CMDLineArgumentsHandler.h  CMakeLists.txt  main.cpp
temp/: base.fs  lighting.frag  lighting.vert  terrain.frag  terrain.vert  terrainPieceOutput.txt
(+2404 files in other folders)
